Bug 441140 - "Xremote doesn't work when DISPLAY is not set but --display is" [r=bsmedberg]